# Autonomous-campus-lost-and-found-management-system

./: BACKEND_INTEGRATION.md  FIX_403_ERROR.md  FRONTEND_SYSTEM_DESIGN.md  INTEGRATION_README.md  INTEGRATION_SUMMARY.md  MOCK_DATA_REMOVAL_PROGRESS.md  QUICKSTART.md  QUICKSTART_INTEGRATION.md  QUICKSTART_UV.md  README.md  SYSTEM_STATUS.md  TESTING_GUIDE.md  docker-compose.yml
backend/: .env.example  .gitignore  REPOSITORY_LAYER.md  REPOSITORY_USAGE.md  activate_users.sql  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  ai.py  auth.py  claims.py  items.py  matches.py  messages.py  notifications.py  users.py
backend/app/core/: __init__.py  cache.py  rate_limit.py  security.py  websocket.py
backend/app/models/: __init__.py  claim.py  item.py  match.py  message.py  notification.py  user.py
backend/app/repositories/: __init__.py  base.py  claim.py  item.py  match.py  message.py  notification.py  user.py
backend/app/schemas/: __init__.py  claim.py  item.py  match.py  message.py  notification.py  user.py
backend/app/services/: ai_model.py  matching.py
backend/app/utils/: __init__.py  helpers.py  validators.py
backend/app/websocket/: __init__.py  manager.py  routes.py
backend/app/workers/: __init__.py  celery_app.py  email_tasks.py  matching_tasks.py
frontend/: clear-storage.js
frontend/app/: globals.css  layout.tsx  (+1 more)
mobile/: MOBILE_TESTING.md  package-lock.json  package.json
(+46 files in other folders)
